whitespace below card fix

--- a/server/public/puppet/puppet.css
+++ b/server/public/puppet/puppet.css
@@ -35,6 +35,22 @@ body:before {
     background-size: cover;
 }
 
+body:after {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 100%;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url('/puppet/k9_create_background.svg') no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 /*
 envelope
 */
